k8s/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - command: ["/opt/keycloak/bin/kc.sh"]
          args:
             - "start"
             - "--proxy-headers=xforwarded"
             - "--http-enabled=true"
             - "--hostname=auth.local"
             - "--hostname-strict=false"
             - "--hostname-backchannel-dynamic=false"
             - "--optimized"
          name: keycloak
          image: ghcr.io/cryptic901/springmarket/keycloak:latest
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5

          resources:
            requests:
              memory: "2Gi"
              cpu: "250m"
            limits:
              memory: "3Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
