k8s/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak
  namespace: keycloak
spec:
  ports:
    - name: keycloak
      port: 9000
      targetPort: 8080
  selector:
    app: keycloak
